src/test/deca/context/invalid/class/invalid_super_class_not_a_class.deca
// Description:
//    Test of a class extending an class which is not a class
//    Test rule 1.3
//
// Result:
// [Begin Result]
//invalid_super_class_not_a_class.deca:18:0: Super class float is not a class identifier. Rule 1.3.
// [End Result]
//
// History:
//    created on 12/01/2025


class MyFirstClass {
}


class MyClass extends float {
     //myMethod is not a class
}

{
    //empty main
}
